Added editButton-directive. Removed version-component.

--- a/grails-app/assets/angular-app/package.json
+++ b/grails-app/assets/angular-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "newsletter-grails-angular",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "description": "A demo project to show the integration of Angular and Grails",
+  "repository": "https://github.com/opitzconsulting/newsletter-grails-angular",
   "license": "MIT",
   "devDependencies": {
     "karma": "~0.10",
@@ -27,8 +27,6 @@
     "update-webdriver": "webdriver-manager update",
 
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
-
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    "protractor": "protractor e2e-tests/protractor.conf.js"
   }
 }
