--- a/grails-app/assets/angular-app/bower.json
+++ b/grails-app/assets/angular-app/bower.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-route": "1.2.x",
+    "angular-resource": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "bootstrap": "3.3.x"
+    "bootstrap": "3.3.x",
+    "font-awesome": "4.3.x"
   }
 }
