--- a/grails-app/assets/angular-app/bower.json
+++ b/grails-app/assets/angular-app/bower.json
@@ -12,6 +12,9 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "bootstrap": "3.3.x",
-    "font-awesome": "4.3.x"
+    "font-awesome": "4.3.x",
+
+    "showdown": "~0.3.1",
+    "codemirror": "~3.21.0"
   }
 }
