--- a/grails-app/assets/javascripts/angular-app/package.json
+++ b/grails-app/assets/javascripts/angular-app/package.json
@@ -7,8 +7,6 @@
   "license": "MIT",
   "devDependencies": {
     "karma": "~0.10",
-    "protractor": "^1.1.1",
-    "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
     "karma-junit-reporter": "^0.2.2"
@@ -16,17 +14,11 @@
   "scripts": {
     "postinstall": "bower install",
 
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
-
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js  --single-run",
 
     "preupdate-webdriver": "npm install",
-    "update-webdriver": "webdriver-manager update",
-
-    "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js"
+    "update-webdriver": "webdriver-manager update"
   }
 }
