--- a/grails-app/assets/javascripts/angular-app/package.json
+++ b/grails-app/assets/javascripts/angular-app/package.json
@@ -9,10 +9,14 @@
     "karma": "~0.10",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
+    "http-server": "^0.6.1",
     "karma-junit-reporter": "^0.2.2"
   },
   "scripts": {
     "postinstall": "bower install",
+
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 8000 -c-1",
 
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
